--- a/templates/home.html
+++ b/templates/home.html
@@ -56,6 +56,12 @@
 		</div>
 	</div>
 	<div class="row">
+		<div class="col-lg-13" align="center">
+			<a href="createPost.html">
+			<button class="btn btn-default btn-lg"> Want to sell something ? Click here. </button></a>
+		</div>
+	</div>
+	<div class="row">
 	<div class="col-lg-3">
 		<div class="panel panel-default">
 			<div class="panel-heading">ALL CATEGORIES</div>
@@ -103,13 +109,13 @@
 			<div class="col-lg-6">
 				<h3 >Information</h3>
 				<a href="about.php">About Us</a><br>
-				<a href="contact.php">Contact Us</a><br> 
+				<a href="contact.php">Contact Us</a><br>
 				
 			</div>
 			<div class="col-lg-6">
 				<h3>My Account</h3>
 				<a href="login.html">Login</a><br>
-				<a href="signup.php">Sign Up</a><br> 
+				<a href="signup.php">Sign Up</a><br>
 				
 			</div>
 		</div>
@@ -118,6 +124,7 @@
 	
 	</footer>
 </footer>	
+
 
 </body>
 </html>
