--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <div class="container">
-	<nav class="navbar navbar-inverse navbar-fixed-top">
+	<nav class="navbar navbar-inverse">
 		<div class="main_image">
 			<div id="wrap">
 				<img class="image" src="../static/images/IITBHUlogo.png">
