--- a/templates/index.html
+++ b/templates/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>BUY/SELL/SHARE Portal</title>
+	<title>EasyShare@IITBHU Portal</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
  	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
- 	<link rel="stylesheet" href="../static/css/style.css" type="text/css"/>
+
+ 	<link rel="stylesheet" href="../static/css/style.css" type="text/css" media="all">
 </head>
 <body>
 <div class="container">
@@ -21,7 +22,7 @@
 		</div>
 	    <div class="container-fluid">
 	    	<div class="navbar-header">
-	    		<a class="navbar-brand" href="#">BUY/SELL/SHARE</a>
+	    		<a class="navbar-brand" href="#">EasyShare@IITBHU</a>
 	    		<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#cNav">
 	    			<span class="icon-bar"></span>
 	    			<span class="icon-bar"></span>
@@ -30,11 +31,11 @@
 	    	</div>
 	    	<div class="collapse navbar-collapse" id="cNav">
 	    	<ul class="nav navbar-nav navbar-right">
-	    	    <li><a href="signup.php"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-	    	    <li><a data-toggle="modal" data-target="#logInId"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-	    	    <li><a href="contact.php"><span class="glyphicon glyphicon-phone-alt"></span>  
-	    	     Contact Us</a></li>
-	    	    <li><a href="about.php"><span class="glyphicon glyphicon-tasks"></span> About Us</a></li>
+	    	    <li><a href="signup.html"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+	    	    <li><a href="login.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li></li>
+	    	    <li><a href="faq.html"><span class="glyphicon glyphicon-info-sign"></span>  
+	    	     FAQ</a></li>
+	    	    <li><a href="about.html"><span class="glyphicon glyphicon-tasks"></span> About Us</a></li>
 	    	</ul>
 	    	</div>
 	    </div>
@@ -74,26 +75,73 @@
 			</div>
 		</div>
 	</div>
-	<div class="col-lg-9">	
+	<div class="col-lg-9">
 		<div class="panel panel-default">
 			<div class="panel-heading">RECENT POSTS</div>
 			<div class="panel-body">
-				<div class="panel recentPosts">
-				<div class="panel-heading" id="recentPosts-heading">atdelectus ducimus necessitatib</div>
-				<div class="panel-body">Lorem ipsum dolor Consequatdelectus ducimus necessitatibus reiciendis optioMetrro and Barcllay have recently entered into an agreement to share transactions data. Barcllays will share all transaction data done on their credit card on any retail store. Metrro will share all transaction done by any credit card on their stores. You wish to use this data to track where are your high value customers shopping other than Metrro.doloremque commodi laudantium ad nulla vel odio? dolor sit amet tempora unde earum doloremque commodi laudantium ad nulla vel odio?Consequatdelectus ducimus necessitatibus reiciendis optio tempora unde earum doloremque commodi laudantium ad nulla vel odio?sit amet</div></div>
-				<div class="panel recentPosts">
-				<div class="panel-heading" id="recentPosts-heading" >atdelectus ducimus necessitatib</div>
-				<div class="panel-body">Lorem ipsum Consequatdelectus ducimus necessitatibus reiciendis optio tempora unde earum doloremque commodi laudantium ad nulla vel odio? dolor sit amet</div></div>
-				<div class="panel recentPosts">
-				<div class="panel-heading" id="recentPosts-heading" >atdelectus ducimus necessitatib</div>
-				<div class="panel-body">Lorem ipsum Consequatdelectus ducimus necessitatibus reiciendis optio tempora unde earum owner of Metrro cash n carry. Metrro has a tie up with Barcllays bank to launch co-branded cards. Metrro and Barcllay have recently entered into an agreement to share transactions data. Barcllays will share all transaction data done on their credit card on any retail store. Metrro will share all transaction done by any credit card on their stores. You wish to use this data to track where are your high value customers shopping other than Metrro.doloremque commodi laudantium ad nulla vel odio? dolor sit amet</div></div>
-				<div class="panel recentPosts">
-				<div class="panel-heading" id="recentPosts-heading" >atdelectus ducimus necessitatib</div>
-				<div class="panel-body">Lorem ipsum Consequatdelectus ducimus necessitatibus reiciendis optio tempora unde earum doloremque commodi laudantium ad nulla vel odio? dolor sit amet</div></div>
+				<div class="row">
+					  <div class="col-md-6">
+					    <div class="thumbnail">
+					      <img src="../static/images/image2.jpg" alt="No image uploaded">
+					      <div class="caption">
+					        <h3 align="center">atdelectus ducimus necessitatib</h3>
+					        <p align="justify">LLorem ipsum dolor Consequatdelectus ducimus necessitatibus reiciendis optioMetrro and Barcllay have recently orem ipsum dolor Consequatdelectus ducimus necessitatibus reiciendis optioMetrro and Barcllay have recently orem ipsum dolor...</p>
+					        <p align="center"><a href="#" class="btn btn-primary" role="button">View Post</a></p>
+					      </div>
+					    </div>
+					  </div>
 				
+					  <div class="col-md-6">
+					    <div class="thumbnail">
+					      <img src="../static/images/image1.jpg" alt="No image uploaded">
+					      <div class="caption">
+					        <h3 align="center">atdelectus ducimus necessitatib</h3>
+					        <p align="justify">LLorem ipsum dolor Consequatdelectus ducimus necessitatibus reiciendis optioMetrro and Barcllay have recently orem ipsum dolor Consequatdelectus ducimus necessitatibus reiciendis optioMetrro and Barcllay have recently orem ipsum dolor...</p>
+					        <p align="center"><a href="#" class="btn btn-primary" role="button">View Post</a></p>
+					      </div>
+					    </div>
+					  </div>
+				</div>	
+				<div class="row">
+					  <div class="col-md-6">
+					    <div class="thumbnail">
+					      <img src="../static/images/image1.jpg" alt="No image uploaded">
+					      <div class="caption">
+					        <h3 align="center">atdelectus ducimus necessitatib</h3>
+					        <p align="justify">LLorem ipsum dolor Consequatdelectus ducimus necessitatibus reiciendis optioMetrro and Barcllay have recently orem ipsum dolor Consequatdelectus ducimus necessitatibus reiciendis optioMetrro and Barcllay have recently orem ipsum dolor...</p>
+					        <p align="center"><a href="#" class="btn btn-primary" role="button">View Post</a></p>
+					      </div>
+					    </div>
+					  </div>
+				
+					  <div class="col-md-6">
+					    <div class="thumbnail">
+					      <img src="../static/images/image1.jpg" alt="No image uploaded">
+					      <div class="caption">
+					        <h3 align="center">atdelectus ducimus necessitatib</h3>
+					        <p align="justify">LLorem ipsum dolor Consequatdelectus ducimus necessitatibus reiciy orem ipsum dolor Consequatdelectus ducimus necessitatibus reiciendis optioMetrro and Barcllay have recently orem ipsum dolor Consequatdel...</p>
+					        <p align="center"><a href="#" class="btn btn-primary" role="button">View Post</a></p>
+					      </div>
+					    </div>
+					  </div>
+				</div>	
+				<div class="row">
+					  <div class="col-md-6">
+					    <div class="thumbnail">
+					      <img src="../static/images/image1.jpg" alt="No image uploaded">
+					      <div class="caption">
+					        <h3 align="center">atdelectus ducimus necessitatib</h3>
+					        <p align="justify">LLorem ipsum dolor Consequatdelectus ducimus necessitatibus reiciendis optioMetrro and Barcllay have recently orem ipsum dolor Consequatdelectus ducimus necessitatibus reiciendis optioMetrro and Barcllay have recently orem ipsum dolor...</p>
+					        <p align="center"><a href="#" class="btn btn-primary" role="button">View Post</a></p>
+					      </div>
+					    </div>
+					  </div>
+
+
+
+				</div>	
 			</div>
 		</div>
-
 	</div>
 	</div>
 </div>
@@ -102,21 +150,20 @@
 		<div class="row">
 			<div class="col-lg-6">
 				<h3 >Information</h3>
-				<a href="about.php">About Us</a><br>
-				<a href="contact.php">Contact Us</a><br> 
+				<a href="aboutus.html">About Us</a><br>
+				<a href="faq.html">FAQ</a><br> 
 				
 			</div>
 			<div class="col-lg-6">
 				<h3>My Account</h3>
 				<a href="login.html">Login</a><br>
-				<a href="signup.php">Sign Up</a><br> 
+				<a href="signup.html">Sign Up</a><br> 
 				
 			</div>
 		</div>
 
 	</div>
-	
-	</footer>
+
 </footer>	
 
 </body>
