--- a/templates/createPost.html
+++ b/templates/createPost.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>BUY/SELL/SHARE Portal</title>
+	<title>EasyShare@IITBHU Portal</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
@@ -21,7 +21,7 @@
 		</div>
 	    <div class="container-fluid">
 	    	<div class="navbar-header">
-	    		<a class="navbar-brand" href="#">BUY/SELL/SHARE</a>
+	    		<a class="navbar-brand" href="#">EasyShare@IITBHU</a>
 	    		<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#cNav">
 	    			<span class="icon-bar"></span>
 	    			<span class="icon-bar"></span>
@@ -31,10 +31,10 @@
 	    	<div class="collapse navbar-collapse" id="cNav">
 	    	<ul class="nav navbar-nav navbar-right">
 	    	    <li><a href="signup.html"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-	    	    <li><a data-toggle="modal" data-target="#logInId"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-	    	    <li><a href="contact.php"><span class="glyphicon glyphicon-phone-alt"></span>  
-	    	     Contact Us</a></li>
-	    	    <li><a href="about.php"><span class="glyphicon glyphicon-tasks"></span> About Us</a></li>
+	    	    <li><a href="login.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li></li>
+	    	    <li><a href="faq.html"><span class="glyphicon glyphicon-info-sign"></span>  
+	    	     FAQ</a></li>
+	    	    <li><a href="about.html"><span class="glyphicon glyphicon-tasks"></span> About Us</a></li>
 	    	</ul>
 	    	</div>
 	    </div>
@@ -88,21 +88,20 @@
 		<div class="row">
 			<div class="col-lg-6">
 				<h3 >Information</h3>
-				<a href="about.php">About Us</a><br>
-				<a href="contact.php">Contact Us</a><br>
+				<a href="aboutus.html">About Us</a><br>
+				<a href="faq.html">FAQ</a><br> 
 				
 			</div>
 			<div class="col-lg-6">
 				<h3>My Account</h3>
 				<a href="login.html">Login</a><br>
-				<a href="signup.php">Sign Up</a><br>
+				<a href="signup.html">Sign Up</a><br> 
 				
 			</div>
 		</div>
 
 	</div>
-	
-	</footer>
+
 </footer>	
 
 
