1. Creates new app, i.e. home. 2. Creates urls.py for home app. 3. Creates four sample views in views.py, each one rendering 4 different html pages.

--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -30,7 +30,7 @@
 	    	</div>
 	    	<div class="collapse navbar-collapse" id="cNav">
 	    	<ul class="nav navbar-nav navbar-right">
-	    	    <li><a href="signup.html"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+	    	    <li><a href="signup/"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
 	    	    <li><a href="login.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li></li>
 	    	    <li><a href="faq.html"><span class="glyphicon glyphicon-info-sign"></span>  
 	    	     FAQ</a></li>
@@ -163,7 +163,7 @@
 			<div class="col-lg-6">
 				<h3>My Account</h3>
 				<a href="login.html">Login</a><br>
-				<a href="signup.html">Sign Up</a><br> 
+				<a href="signup/">Sign Up</a><br> 
 				
 			</div>
 		</div>
