--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -1,71 +1,18 @@
-<!DOCTYPE HTML>
+{% extends "base.html" %}
 
-<html>
-<head>
-	<title>Sign in to Buy and sell Portal</title>
-
-	
-
+{% block add_static %}
+	{{ block.super }}
 	<link href="../static/css/loginstyle.css" rel="stylesheet" type="text/css">
-	
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-	
 
-	<!-- Bootstrap -->
-	<link href="../static/css/bootstrap.min.css" rel="stylesheet">
-	<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-	<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-	<!--[if lt IE 9]>
-	
-	<![endif]-->
-		
-		
-	
+{% endblock add_static %}
 
-</head>
-<body class="body" background="../static/images/background.gif">
-<div class="container">
- `	<div class="row">
+{% block content %}
+	<div class="container">
+	<div class="row">
+	<div class="col-md-6 col-md-offset-3">
+	<center><h class="heading">Sign in to Buy/Sell portal</h></center>
+	</div>
 	
-	<div class="col-md-12">
-	<div class="row">
-	<div class="col-md-3">
-	</div>
-	<div class="col-md-1">
-	</div>
-	<div class="col-md-3">
-	<div class="row">
-	<div class="col-md-5">
-	</div>
-	<div class="col-md-3">
-	<a href="index.html">
-		<center><img class="image" src="../static/images/IITBHUlogo.png"></center>
-	</a>
-	</div>
-	<div class="col-md-4">
-	</div>
-	</div>
-	</div>
-	<div class="col-md-2">
-	</div>
-	<div class="col-md-3">
-	</div>	
-	</div>
-	<br>
-	<br>
-	<div class="row">
-	<div class="col-md-3">
-	</div>
-	<div class="col-md-6">
-	<center><h class="heading">Sign in to Buy/Sell portal&emsp;&emsp;</h></center>
-	</div>
-	<div class="col-md-3">
-	</div>
 	</div>
 	<div class="row">
 	<div class="col-md-3">
@@ -73,7 +20,7 @@
 	<div class="col-md-6">
 		<fieldset class="box">
 		<center>
-		<form method="post" action="index.html">
+		<form method="post" action="">{% csrf_token %}
 			<br>
 			<div class="form-group">
 			<div class="row">
@@ -106,7 +53,7 @@
 			<div class="row">
 			
 			<div class="col-md-12">
-			<input type="password" name="passward" class="inputtext" class="form-control" id="exampleInputPassword1">
+			<input type="password" name="password" class="inputtext" class="form-control" id="exampleInputPassword1">
 			</div>
 			
 			</div>
@@ -176,24 +123,7 @@
 	<div class="col-md-3">
 	</div>
 	</div>	
-		
-	
 </div>
 </div>
-
-<hr style="background:black">
-<footer>
-<p>© IIT-BHU 2016</p>
-</footer>
-</div>	
-
-	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-	<!-- Include all compiled plugins (below), or include individual files as needed -->
-	<script src="js/bootstrap.min.js"></script>	
-</body>
-</html>
-
-
-
-
+</div>
+{% endblock content %}	
