Starts new app named 'post', implements CRUD in post app, Main Index page now shows actual posts

--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -93,8 +93,13 @@ a:link{
 	background: url("../images/postBack.jpg") no-repeat;
 	background-size: 100% 100%;
 }
+.thumbnail img{
+	width: 400px;
+	height: 200px;	
+}
 @media (max-width: 500px){
 	.navbar .main_image .heading{
 		font-size: 15px;
 	}
 } 
+
