--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -12,7 +12,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
- 	<link rel="stylesheet" href="../static/css/style.css" type="text/css" media="all">
+ 	<link rel="stylesheet" href="{% static 'css/style.css' %}" type="text/css" media="all">
 	{% endblock add_static %}
 </head>
 <body>
