--- a/src/templates/navbar_before_login.html
+++ b/src/templates/navbar_before_login.html
@@ -1,7 +1,8 @@
+ {% load staticfiles %}
 <nav class="navbar navbar-inverse">
 		<div class="main_image">
 			<div id="wrap">
-				<img class="image" src="../static/images/IITBHUlogo.png">
+				<img class="image" src="{% static 'images/IITBHUlogo.png' %}">
 			</div>
 			<p class="heading">Indian Institute of Technology (BHU), Varanasi</p>
 		</div>
