Implements Search button functionality, Shows user's details on profile page, Basic mail sending(after signup) also done

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -15,7 +15,7 @@
 	<div class="row">
 		<div class="container-fluid searchbox">
 			<div align="center">
-				<form class="navbar-form" role="search" action="">
+				<form class="navbar-form" role="search" action="./search/" method="get">
 						<div class="input-group">
 						<input type="text" class="form-control input-lg" placeholder="Search" name="search_query">
 						<div class="input-group-btn">
