--- a/src/templates/signup.html
+++ b/src/templates/signup.html
@@ -18,6 +18,12 @@
 						<input class="form-control FormElement" type="password" name="userPasswd" required="True" placeholder="Password">
 					</div>
 					<div class="form-group" >
+						<input class="form-control FormElement " type="text" name="userDepartment" required="True" placeholder="Department">
+					</div>
+					<div class="form-group" >
+						<input class="form-control FormElement " type="text" name="userBatch" required="True" placeholder="Batch">
+					</div>
+					<div class="form-group" >
 						<input class="form-control FormElement " type="number" name="userContact" required="True" placeholder="Contact Number">
 					</div>
 				
