--- a/src/templates/aboutus.html
+++ b/src/templates/aboutus.html
@@ -5,12 +5,12 @@
  <!--Import Google Icon Font-->	
  <link href='https://fonts.googleapis.com/css?family=Orbitron' rel='stylesheet' type='text/css'>
 		<!--Import materialize.css-->
-	  <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
-	  <link rel="stylesheet" href="css/style.css" type="text/css"/>
-	  <link href="css/materialize.css" type="text/css" rel="alternate stylesheet" media="screen,projection"/>
+	  <link type="text/css" rel="stylesheet" href="../static/css/materialize.min.css"  media="screen,projection"/>
+	  <link rel="stylesheet" href="../static/css/style2.css" type="text/css"/>
+	  <link href="../static/css/materialize.css" type="text/css" rel="alternate stylesheet" media="screen,projection"/>
 	  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 	  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js" type="text/javascript"></script>
+ <script src="../static/js/jquery.min.js" type="text/javascript"></script>
       <script>
       $(document).ready(function(){
         $('.scrollable').click(function(){
@@ -25,6 +25,7 @@
       </head>
 
 <body>
+
  	<div class="im">	
 	<center>
 		<p style="font-size:40px;margin-top:0;padding-top:10px; margin-bottom:0;padding-bottom:0;">About us</p>
@@ -36,13 +37,16 @@
 	<div class="center" >
                 <a href="#sujal-card" style="color: white;" class="scrollable darrow"><i class="fa fa-angle-down fa-4x"></i></a>
               </div>
+
 	<div id="go-up">
           <a class="btn-floating btn-large waves-effect waves-light orange scrollable" href="#complete-top"><i class="fa fa-angle-up fa-4x" style="font-size:30px;"></i></a>
     </div>
+	<a style="color: black;position:fixed;top:8%;right:3%;"class="btn-floating btn-large waves-effect waves-light orange" href="/">Home</a>
+    
 	<div id="sujal-card" class="card-panel hoverable" style="margin-left:40px;margin-right:40px;">
 	<div id="sujal" class="container row">
 		  <div class="col s12 m4">
-		  <img class="image-large z-depth-2" src="images/sujal-large.jpg" alt="can't load">
+		  <img class="image-large z-depth-2" src="../static/images/sujal-large.jpg" alt="can't load">
 		  </div>
 		  <div class="col s12 m8 mod aboutus">
 					<p class="light" style="text-align: justify;f">
@@ -74,7 +78,7 @@
 
 	 <div id="shivam" class="container row">
 		 <div class="col s12 m4"	>
-		 <img class="image-large z-depth-2" src="images/shivam-large.jpg" alt="can't load">
+		 <img class="image-large z-depth-2" src="../static/images/shivam-large.jpg" alt="can't load">
 		 </div>
 		 <div class="col s12 m8 mod aboutus">
 					<p class="light" style="text-align: justify;">
@@ -104,7 +108,7 @@
 	<div class="card-panel hoverable" style="margin-left:40px;margin-right:40px;">
 	 <div id="divesh" class="container row">
 		 <div class="col s12 m4">
-		 <img class="image-large z-depth-2" src="images/divesh-large.jpg" alt="can't load">
+		 <img class="image-large z-depth-2" src="../static/images/divesh-large.jpg" alt="can't load">
 		 </div>
 		 <div class="col s12 m8 mod aboutus">
 					<p class="light" style="text-align: justify;">
@@ -133,7 +137,7 @@
 	<div class="card-panel hoverable" style="margin-left:40px;margin-right:40px;">
 	 <div id="vishal" class="container row">
 		 <div class="col s12 m4">
-		 <img class="image-large z-depth-2" src="images/vishal-large.jpg" alt="can't load">
+		 <img class="image-large z-depth-2" src="../static/images/vishal-large.jpg" alt="can't load">
 		 </div>
 		 <div class="col s12 m8 mod aboutus">
 					<p class="light" style="text-align: justify;">
@@ -149,7 +153,7 @@
 	</div>
 	</div>
 	<footer class="bottom">
-		<center><a href="home.html" style="color:white; font-size:30px;">Home</a><center>
+		<center><a href="/" style="color:white; font-size:30px;">Home</a><center>
 	</footer>
 </body>
 </html>
