--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -26,7 +26,7 @@
 			<div class="row">
 			
 			<div class="col-md-12">
-			<label for="username" id="label"><h>Username or email address</h></label>
+			<label for="username" id="label"><h>Username </h></label>
 			</div>
 			
 			</div>
@@ -79,8 +79,8 @@
 		<fieldset class="signup">
 		<br>
 		<center>
-			<h>New to Bull/Sell Portal? </h>
-			<a href="signup.php" class="signuplink"><h>Create an account</h></a>
+			<h>New to Buy/Sell Portal? </h>
+			<a href="/signup" style="color:blue"><h>Create an account</h></a>
 		</center>	
 		<br>
 	
@@ -91,39 +91,6 @@
 	</div>
 	<br>
 	<br>
-	
-	<div class="row">
-	
-	<div class="col-md-3">
-	</div>
-	<div class="col-md-6">
-	<div class="row">
-		<div class="col-md-2">
-		</div>
-		<div class="col-md-2">
-		<a href="Guidelines.html">Guidelines</a>
-		</div>
-		<div class="col-md-2">
-		
-		<a href="Guidelines.html">FAQ</a>
-		</div>
-		<div class="col-md-2">
-		
-		<a href="Guidelines.html">Contact us</a>
-		</div>
-		<div class="col-md-2">
-		
-		<a href="Guidelines.html">About Us</a>
-		</div>
-		<div class="col-md-2">
-		</div>
-		
-	</div>
-	</div>
-	<div class="col-md-3">
-	</div>
-	</div>	
-</div>
 </div>
 </div>
 {% endblock content %}	
