--- a/src/templates/navbar_before_login.html
+++ b/src/templates/navbar_before_login.html
@@ -8,7 +8,7 @@
 		</div>
 	    <div class="container-fluid">
 	    	<div class="navbar-header">
-	    		<a class="navbar-brand" href="#">EasyShare@IITBHU</a>
+	    		<a class="navbar-brand" href="/">EasyShare@IITBHU</a>
 	    		<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#cNav">
 	    			<span class="icon-bar"></span>
 	    			<span class="icon-bar"></span>
@@ -21,7 +21,7 @@
 	    	    <li><a href="/login/"><span class="glyphicon glyphicon-log-in"></span> Login</a></li></li>
 	    	    <li><a href="/faq/"><span class="glyphicon glyphicon-info-sign"></span>  
 	    	     FAQ</a></li>
-	    	    <li><a href="/about/"><span class="glyphicon glyphicon-tasks"></span> About Us</a></li>
+	    	    <li><a href="/aboutus/"><span class="glyphicon glyphicon-tasks"></span> About Us</a></li>
 	    	</ul>
 	    	</div>
 	    </div>
