1. Resolves Category issue. 2. Add a link "See messages" on navbar after login. 3. All chats will be visible through "See messages link". 4. Some HTML design changed across pages. 5. Footer now shows Home link.

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -31,16 +31,19 @@
 	<footer class="footer">
 	<div class="container">
 		<div class="row">
-			<div class="col-lg-6">
+			<div class="col-lg-5">
 				<h3 >Information</h3>
 				<a href="/aboutus/">About Us</a><br>
 				<a href="/faq/">FAQ</a><br> 
 				
 			</div>
-			<div class="col-lg-6">
+			<div class="col-lg-5">
 				<h3>My Account</h3>
 				<a href="/login">Login</a><br>
 				<a href="/signup/">Sign Up</a><br> 
+			</div>
+			<div class="col-lg-2">
+				<h3><a href="/" style="color:white;">Home</a></h3>
 			</div>
 		</div>
 
