--- a/src/templates/postsList.html
+++ b/src/templates/postsList.html
@@ -25,7 +25,7 @@
 	<div class="col-lg-6 col-lg-offset-3">
 		<div class="panel panel-default">
 			<div class="panel-heading">RESULTS</div>
-			<div class="panel-body">
+			<div class="panel-body" style="height: 600px;  overflow-y: scroll;">
 				{% if all_posts %}
 				{% for obj in all_posts %}
 					<div class="row">
