--- a/src/templates/chat.html
+++ b/src/templates/chat.html
@@ -13,7 +13,7 @@
 		<h2 align = "center"><a href="{{ other_user.get_absolute_url }}">{{ other_user.name }} </a><span id = "status"> seems offline. But you may send messages.</span></h2>
 	{% endif %}
 	<div class="col-md-8 col-md-offset-2">
-		<div class = "panel panel-default" id="mypanel" style="max-height: 500px;  overflow-y: scroll;">
+		<div class = "panel panel-default" id="mypanel" style="height: 300px;  overflow-y: scroll;">
 		<div class = "panel-body" id = "chatbox">
 			{% for chat in chatmessage_list %}
         {% if user.user_id == chat.chat_sender %}
